# testlink-model

./: .gitignore  AUTHORS  ChangeLog  Makefile  Pipfile  README.md  _config.yml  context.jsonld  contextn.jsonld  index.md  notes.md  setup.cfg  testlink-model.graphql  testlink-model.owl.ttl  testlink-model.proto  testlink-model.shex  testlink-model.yaml
about/: mapping-neo4j.md  mapping-rdf.md  notes.txt
contrib/: README.md  class_extensions.yaml  closures.yaml  core.yaml  go.yaml  monarch.yaml  taxon.yaml  translator.yaml
docs/: Activity.md  ActivityAndBehavior.md  AdministrativeEntity.md  AdministrativeOperation.md  Agent.md  Annotation.md  ApexInventoryArchive.md  Application.md  ApplicationConfiguration.md  ApplicationConfigurationToApplicationAssociation.md  ApplicationInstance.md  ApplicationInstanceConfiguration.md  ApplicationInstanceConfigurationToApplicationInstanceAssociation.md  ApplicationInstanceToApplicationAssociation.md  ApplicationInstanceToDomainEnvironmentAssociation.md  ApplicationInstanceToRealmAssociation.md  ApplicationInstanceToServerGroupHubAssociation.md  ApplicationToApplicationTypeAssociation.md  ApplicationToComponentAssociation.md  ApplicationType.md  ApplicationUser.md  ApplicationUserLogin.md  ApplicationUserLoginToApplicationUserAssociation.md  Archive.md  Association.md  Attribute.md  AttributeType.md  Build.md  BuildConfiguration.md  BuildConfigurationToBuildAssociation.md  BuildToApplicationInstanceAssociation.md  BuildToApplicationUserLoginAssociation.md  BuildToProjectAssociation.md  BuildToVcsRootAssociation.md  Cluster.md  (+206 more)
(+243 files in other folders)
