[metadata]
name = testlink_model
description = 'A high level datamodel of computer systems ontology entities and associations'
version = 0.0.1
url = https://github.com/csolink/testlink-model
author = Noel McLoughlin
author-email = noel.mcloughlin@gmail.com
summary = testlink Model
home-page = https://csolink.github.io/testlink-model/docs/
license = CC0 1.0 Universal
python-requires = >=3.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Computer Sciences
    Topic :: Scientific/Engineering :: Cso-Informatics
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    testlink
    Datamodel
    DCATS

[files]
packages =
    testlink
